tests/compile_fail/declare_scheduler_reserved_name_eevdf_padded.stderr
error: declare_scheduler!: `name = "  eevdf  "` is reserved for the built-in Scheduler::EEVDF baseline; pick a different name
  --> tests/compile_fail/declare_scheduler_reserved_name_eevdf_padded.rs:10:12
   |
10 |     name = "  eevdf  ",
   |            ^^^^^^^^^^^
